# Haskell3DProject

./: CHANGELOG.md  Haskell3D.cabal  Haskell3DProject.cabal  LICENSE  Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
exe/: Base3D.hs  Graphics3D.hs  Main.hs  Physics3D.hs
