cabal-version:      3.0
name:               Haskell3DProject
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             William Lopez
maintainer:         williamlopez011602@gmail.com
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable Haskell3DProject
    --import:           warnings

    main-is:          "Main.hs"

    other-modules:    Graphics3D, Base3D, Physics3D

    build-depends:    base, gloss
    
    hs-source-dirs:   exe
    
    default-language: Haskell2010
